# snake

./: pyproject.toml
src/snake/: food_spawner.py  game.py
